--- a/Drone_Dogfight.ipynb
+++ b/Drone_Dogfight.ipynb
@@ -1,121 +1,166 @@
 {
- "cells": [
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Overview\n",
-    "\n",
-    "In this part we will create a reinforcement learning model for drone dogfight is an interesting and challenging task.This can be divided into serveral steps.\n",
-    "\n",
-    "## 1. Define the environment:\n",
-    "\n",
-    "Create a simulation environment that models the drone's dynamics, including its position, velocity, and orientation. Consider using an existing physics engine or simulator like AirSim, Gazebo, or Unity for this task.\n",
-    "\n",
-    "## 2. State representation:\n",
-    "\n",
-    "Define the state space of the drone, which will include its position, velocity, orientation, and possibly additional information, such as the destination position and the distance to the destination.\n",
-    "\n",
-    "## 3. Action representation:\n",
-    "\n",
-    "Define the action space of the drone, which might include commands for changing its velocity, pitch, roll, and yaw.\n",
-    "\n",
-    "## 4. Reward function:\n",
-    "\n",
-    "Design a reward function to guide the drone towards the destination. The reward function should provide positive reinforcement when the drone moves closer to the destination and negative reinforcement when it moves away. You may also include penalties for excessive control inputs or undesirable behaviors, such as crashing or flying too high or too low.\n",
-    "\n",
-    "## 5. Choose a reinforcement learning algorithm:\n",
-    "\n",
-    "Select a suitable reinforcement learning algorithm to train the drone, such as Q-learning, Deep Q-Networks (DQN), Proximal Policy Optimization (PPO), or Soft Actor-Critic (SAC). Some algorithms may be more appropriate for continuous control tasks, like PPO or SAC, while others may be better suited for discrete action spaces, like Q-learning or DQN.\n",
-    "\n",
-    "## 6. Train the model:\n",
-    "\n",
-    "Set up the training loop, initialize the model's parameters, and train the model using the chosen reinforcement learning algorithm. This will involve generating episodes of the drone's interactions with the environment, collecting the state, action, and reward information, and updating the model's parameters based on the observed experience.\n",
-    "\n",
-    "## 7. Evaluate and fine-tune:\n",
-    "\n",
-    "Evaluate the trained model in the simulation environment and analyze its performance. Fine-tune the model's hyperparameters, the reward function, or the state and action representations as needed to improve performance.\n",
-    "\n",
-    "## 8. Transfer to a real drone (optional):\n",
-    "\n",
-    "If you plan to deploy the model on a real drone, make sure to test and fine-tune the model in the real-world environment, accounting for any discrepancies between the simulation and the actual drone's behavior.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Reward Function\n",
-    "\n",
-    "Designing a suitable reward function is a crucial aspect of reinforcement learning, as it guides the learning process and determines the desired behavior of the agent. For the drone navigation task, you want to create a reward function that encourages the drone to reach the destination as efficiently and safely as possible. Here are some components to consider when designing the reward function:\n",
-    "\n",
-    "Proximity to the destination:\n",
-    "Reward the drone for moving closer to the destination and penalize it for moving away. You can calculate the Euclidean distance between the drone's current position and the destination, and use the change in distance as a component of the reward.\n",
-    "For example: \n",
-    "\n",
-    "$$\n",
-    "\n",
-    "reward = -1 * (distance_to_destination_t - distance_to_destination_t-1)\n",
-    "\n",
-    "$$\n",
-    "\n",
-    "This reward will be positive when the drone moves closer to the destination and negative when it moves away.\n",
-    "\n",
-    "Time penalty:\n",
-    "Encourage the drone to reach the destination as quickly as possible by introducing a time penalty. This can be a small negative constant reward at each time step, which will motivate the drone to minimize the number of steps it takes to reach the goal.\n",
-    "For example: time_penalty = -0.1\n",
-    "\n",
-    "Control input penalty:\n",
-    "Discourage the drone from making excessive or abrupt control inputs by penalizing large changes in velocity, pitch, roll, or yaw. This can help ensure a smoother and more energy-efficient flight.\n",
-    "For example: control_penalty = -1 * (abs(control_input_t - control_input_t-1))\n",
-    "\n",
-    "Safety constraints:\n",
-    "Introduce penalties for violating safety constraints, such as flying too high or too low, getting too close to obstacles, or crashing. These penalties should be significantly larger than the other components of the reward function to discourage such behavior.\n",
-    "For example:\n",
-    "\n",
-    "height_penalty = -1000 if drone_height < min_height or drone_height > max_height else 0\n",
-    "obstacle_penalty = -1000 if drone_collides_with_obstacle else 0\n",
-    "Bonus for reaching the destination:\n",
-    "Provide a large positive bonus when the drone reaches the destination. This will serve as a clear incentive for the agent to complete the task.\n",
-    "For example: destination_bonus = 1000 if drone_reaches_destination else 0\n",
-    "\n",
-    "You can combine these components to form the complete reward function:\n",
-    "\n",
-    "reward = proximity_reward + time_penalty + control_penalty + height_penalty + obstacle_penalty + destination_bonus\n",
-    "\n",
-    "Remember that the exact values of the coefficients and penalties will depend on your specific problem and may require tuning to achieve the desired behavior. Experiment with different combinations and adjust the parameters as needed to encourage efficient and safe navigation to the destination."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/RiverTwilight/Awesome-Machine-Learning-Playground/blob/master/Drone_Dogfight.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2GV7uet8Lop1"
+      },
+      "source": [
+        "# Overview\n",
+        "\n",
+        "In this part we will create a reinforcement learning model for drone dogfight is an interesting and challenging task.This can be divided into serveral steps.\n",
+        "\n",
+        "## 1. Define the environment:\n",
+        "\n",
+        "Create a simulation environment that models the drone's dynamics, including its position, velocity, and orientation. Consider using an existing physics engine or simulator like AirSim, Gazebo, or Unity for this task.\n",
+        "\n",
+        "## 2. State representation:\n",
+        "\n",
+        "Define the state space of the drone, which will include its position, velocity, orientation, and possibly additional information, such as the destination position and the distance to the destination.\n",
+        "\n",
+        "## 3. Action representation:\n",
+        "\n",
+        "Define the action space of the drone, which might include commands for changing its velocity, pitch, roll, and yaw.\n",
+        "\n",
+        "## 4. Reward function:\n",
+        "\n",
+        "Design a reward function to guide the drone towards the destination. The reward function should provide positive reinforcement when the drone moves closer to the destination and negative reinforcement when it moves away. You may also include penalties for excessive control inputs or undesirable behaviors, such as crashing or flying too high or too low.\n",
+        "\n",
+        "## 5. Choose a reinforcement learning algorithm:\n",
+        "\n",
+        "Select a suitable reinforcement learning algorithm to train the drone, such as Q-learning, Deep Q-Networks (DQN), Proximal Policy Optimization (PPO), or Soft Actor-Critic (SAC). Some algorithms may be more appropriate for continuous control tasks, like PPO or SAC, while others may be better suited for discrete action spaces, like Q-learning or DQN.\n",
+        "\n",
+        "## 6. Train the model:\n",
+        "\n",
+        "Set up the training loop, initialize the model's parameters, and train the model using the chosen reinforcement learning algorithm. This will involve generating episodes of the drone's interactions with the environment, collecting the state, action, and reward information, and updating the model's parameters based on the observed experience.\n",
+        "\n",
+        "## 7. Evaluate and fine-tune:\n",
+        "\n",
+        "Evaluate the trained model in the simulation environment and analyze its performance. Fine-tune the model's hyperparameters, the reward function, or the state and action representations as needed to improve performance.\n",
+        "\n",
+        "## 8. Transfer to a real drone (optional):\n",
+        "\n",
+        "If you plan to deploy the model on a real drone, make sure to test and fine-tune the model in the real-world environment, accounting for any discrepancies between the simulation and the actual drone's behavior.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f-7Buz87Lop3"
+      },
+      "source": [
+        "# Reward Function\n",
+        "\n",
+        "Designing a suitable reward function is a crucial aspect of reinforcement learning, as it guides the learning process and determines the desired behavior of the agent. For the drone navigation task, you want to create a reward function that encourages the drone to reach the destination as efficiently and safely as possible. Here are some **components** to consider when designing the reward function:\n",
+        "\n",
+        "## Proximity to the destination:\n",
+        "Reward the drone for moving closer to the destination and penalize it for moving away. You can calculate the Euclidean distance between the drone's current position and the destination, and use the change in distance as a component of the reward.\n",
+        "\n",
+        "For example: \n",
+        "\n",
+        "$$ R = -1 * (D_{t} - D_{t-1}) $$\n",
+        "\n",
+        "This reward will be positive when the drone moves closer to the destination and negative when it moves away.\n",
+        "\n",
+        "Time penalty:\n",
+        "Encourage the drone to reach the destination as quickly as possible by introducing a time penalty. This can be a small negative constant reward at each time step, which will motivate the drone to minimize the number of steps it takes to reach the goal.\n",
+        "For example: time_penalty = -0.1\n",
+        "\n",
+        "Control input penalty:\n",
+        "Discourage the drone from making excessive or abrupt control inputs by penalizing large changes in velocity, pitch, roll, or yaw. This can help ensure a smoother and more energy-efficient flight.\n",
+        "For example: control_penalty = -1 * (abs(control_input_t - control_input_t-1))\n",
+        "\n",
+        "Safety constraints:\n",
+        "Introduce penalties for violating safety constraints, such as flying too high or too low, getting too close to obstacles, or crashing. These penalties should be significantly larger than the other components of the reward function to discourage such behavior.\n",
+        "For example:\n",
+        "\n",
+        "height_penalty = -1000 if drone_height < min_height or drone_height > max_height else 0\n",
+        "obstacle_penalty = -1000 if drone_collides_with_obstacle else 0\n",
+        "Bonus for reaching the destination:\n",
+        "Provide a large positive bonus when the drone reaches the destination. This will serve as a clear incentive for the agent to complete the task.\n",
+        "For example: destination_bonus = 1000 if drone_reaches_destination else 0\n",
+        "\n",
+        "You can combine these components to form the complete reward function:\n",
+        "\n",
+        "reward = proximity_reward + time_penalty + control_penalty + height_penalty + obstacle_penalty + destination_bonus\n",
+        "\n",
+        "Remember that the exact values of the coefficients and penalties will depend on your specific problem and may require tuning to achieve the desired behavior. Experiment with different combinations and adjust the parameters as needed to encourage efficient and safe navigation to the destination."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "plaintext"
+        },
+        "id": "87Xy3eDrLop4"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def reward_function(drone_position, destination, control_input_t, control_input_t_minus_1, drone_height, min_height, max_height, drone_collides_with_obstacle, drone_reaches_destination):\n",
+        "    \n",
+        "    # Proximity reward\n",
+        "    distance_to_destination_t = np.linalg.norm(drone_position - destination)\n",
+        "    distance_to_destination_t_minus_1 = np.linalg.norm(drone_position - destination + drone_position - drone_position)\n",
+        "    proximity_reward = -1 * (distance_to_destination_t - distance_to_destination_t_minus_1)\n",
+        "    \n",
+        "    # Time penalty\n",
+        "    time_penalty = -0.1\n",
+        "    \n",
+        "    # Control input penalty\n",
+        "    control_penalty = -1 * np.sum(np.abs(control_input_t - control_input_t_minus_1))\n",
+        "    \n",
+        "    # Height penalty\n",
+        "    height_penalty = -1000 if drone_height < min_height or drone_height > max_height else 0\n",
+        "    \n",
+        "    # Obstacle penalty\n",
+        "    obstacle_penalty = -1000 if drone_collides_with_obstacle else 0\n",
+        "    \n",
+        "    # Destination bonus\n",
+        "    destination_bonus = 1000 if drone_reaches_destination else 0\n",
+        "    \n",
+        "    # Combine components\n",
+        "    total_reward = proximity_reward + time_penalty + control_penalty + height_penalty + obstacle_penalty + destination_bonus\n",
+        "    \n",
+        "    return total_reward\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SZlq5aUXLop4"
+      },
+      "source": [
+        "# Reference\n",
+        "\n",
+        "1."
+      ]
     }
-   },
-   "outputs": [],
-   "source": []
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "orig_nbformat": 4,
+    "colab": {
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
+    }
   },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Reference\n",
-    "\n",
-    "1."
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  },
-  "orig_nbformat": 4
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
